--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,7 +39,7 @@
     .profile-picture {
         height: $image-size;
         width: $image-size;
-        position: relative;
+        //position: relative;
         margin: -10px 0 0 15px;
         float: right;
         border-radius: 50%;
@@ -47,11 +47,11 @@
             padding: 0;
             margin: 0;
         }
-        @media (max-width: $small-width) {
-            img {
-                margin-top: -5px;
-            }
-        }
+        //@media (max-width: $small-width) {
+        //    img {
+        //        margin-top: -5px;
+        //    }
+        //}
     }
     img {
         text-align: center;
