--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,19 +39,19 @@
     .profile-picture {
         height: $image-size;
         width: $image-size;
-        //position: relative;
+        position: relative;
         margin: -10px 0 0 15px;
-        float: left;
-        //border-radius: 50%;
+        float: right;
+        border-radius: 50%;
         p & {
             padding: 0;
             margin: 0;
         }
-        //@media (max-width: $small-width) {
-        //    img {
-        //        margin-top: -5px;
-        //    }
-        //}
+        @media (max-width: $small-width) {
+            img {
+                margin-top: -5px;
+            }
+        }
     }
     img {
         text-align: center;
