--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -40,12 +40,12 @@
         height: $image-size;
         width: $image-size;
         position: relative;
-        margin: -10px 0 0 15px;
+        //margin: -10px 0 0 15px;
         float: right;
         border-radius: 100%;
         p & {
-            padding: 10;
-            margin: 10;
+            padding: 0;
+            margin: 0;
         }
         @media (max-width: $small-width) {
             img {
@@ -54,7 +54,7 @@
         }
     }
     img {
-        text-align: center;
+        text-align: left;
         width: 100%;
     }
 }
