--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -40,8 +40,8 @@
         height: $image-size;
         width: $image-size;
         position: relative;
-        //margin: -10px 0 0 15px;
-        float: right;
+        margin: -10px 0 0 15px;
+        float: left;
         border-radius: 100%;
         p & {
             padding: 0;
