--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -40,18 +40,18 @@
         height: $image-size;
         width: $image-size;
         position: relative;
-        margin: -10px 0 0 15px;
-        float: left;
-        border-radius: 100%;
+        //margin: -10px 0 0 15px;
+        float: right;
+        border-radius: 0%;
         p & {
             padding: 0;
             margin: 0;
         }
-        @media (max-width: $small-width) {
-            img {
-                margin-top: -5px;
-            }
-        }
+        //@media (max-width: $small-width) {
+        //    img {
+        //        margin-top: -5px;
+        //    }
+        //}
     }
     img {
         text-align: left;
