--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,10 +39,10 @@
     .profile-picture {
         height: $image-size;
         width: $image-size;
-        position: relative;
+        //position: relative;
         //margin: -10px 0 0 15px;
-        float: right;
-        border-radius: 0%;
+        float: left;
+        //border-radius: 0%;
         p & {
             padding: 0;
             margin: 0;
