--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -37,12 +37,12 @@
         font-style: italic;
     }
     .profile-picture {
-        height: $image-size;
-        width: $image-size;
+        height: 1000; //$image-size;
+        width: 1000;//$image-size;
         position: relative;
         margin: -10px 0 0 15px;
         float: right;
-        border-radius: 50%;
+        border-radius: 100%;
         p & {
             padding: 0;
             margin: 0;
