--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -42,12 +42,12 @@
         position: relative;
         margin: -10px 0 0 15px;
         float: right;
-        border-radius: 100%;
+        border-radius: 50%%;
         p & {
             padding: 0;
             margin: 0;
         }
-        @media (max-width: $small-width) {
+        @media (max-width: 40) {
             img {
                 margin-top: -5px;
             }
