--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -47,11 +47,11 @@
             padding: 0;
             margin: 0;
         }
-        @media (max-width: 40) {
-            img {
-                margin-top: -5px;
-            }
-        }
+        //@media (max-width: 40) {
+        //    img {
+        //        margin-top: -5px;
+        //    }
+        //}
     }
     img {
         text-align: center;
