--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -37,21 +37,21 @@
         font-style: italic;
     }
     .profile-picture {
-        height: 50; //$image-size;
-        width: 37.6;//$image-size;
+        height: $image-size;
+        width: $image-size;
         position: relative;
         margin: -10px 0 0 15px;
         float: right;
-        border-radius: 50%%;
+        border-radius: 50%;
         p & {
             padding: 0;
             margin: 0;
         }
-        //@media (max-width: 40) {
-        //    img {
-        //        margin-top: -5px;
-        //    }
-        //}
+        @media (max-width: $small-width) {
+            img {
+                margin-top: -5px;
+            }
+        }
     }
     img {
         text-align: center;
