playing with the photo.

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,10 @@
 ---
 ---
-//@import "style";
+@import "style";
 
-img {
+/*img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
   width: 150px;
-}
+}*/
