--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -42,7 +42,7 @@
         position: relative;
         margin: -10px 0 0 15px;
         float: right;
-        border-radius: 50%;
+        border-radius: 8px;// 50%;
         p & {
             padding: 0;
             margin: 0;
@@ -54,7 +54,13 @@
         }
     }
     img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        width: 150px;
+    }
+    /*img {
         text-align: center;
         width: 100%;
-    }
+    }*/
 }
