--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -57,7 +57,8 @@
         border: 1px solid #ddd;
         border-radius: 4px;
         padding: 5px;
-        width: 150px;
+        width: 350px;//150px;
+        height: 400px;
     }
     /*img {
         text-align: center;
