--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -65,7 +65,8 @@ hr {
 /* Divs */
 
 .container {
-    //max-width: $max-width;
+    max-width: 400px; //$max-width;
+    max-height: 400px;
     margin: auto;
 }
 .wrapper {
