--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,7 +39,7 @@
     .profile-picture {
         height: 200px; //150px; //$image-size;
         width: 150px; //$image-size;
-        position: border-left; //relative;
+        position: relative;
         margin: -10px 0 0 15px;
         float: left;
         border-radius: 1px;//32px;// 50%;
