--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -66,7 +66,6 @@ hr {
 
 .container {
     max-width: 400px; //$max-width;
-    max-height: 400px;
     margin: auto;
 }
 .wrapper {
@@ -79,7 +78,7 @@ hr {
 	margin: auto;
 	display: block;
 	max-height: 100px;
-	text-align: center;
+	text-align: border-left;//center;
 }
 
 /* Mobile */
