--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -27,7 +27,7 @@
         content: "[" counter(list, decimal) "] ";
         counter-increment: list;
         position: absolute;
-        //left: -30px;
+        left: -30px;
     }
     blockquote {
         //border: 1px solid black;
@@ -41,7 +41,7 @@
         width: 150px; //$image-size;
         position: relative;
         margin: -10px 0 0 15px;
-        float: left;
+        float: right;
         border-radius: 1px;//32px;// 50%;
         p & {
             padding: 0;
