playing with photo.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -65,7 +65,7 @@ hr {
 /* Divs */
 
 .container {
-    max-width: 400px; //$max-width;
+    max-width: 200px; //$max-width;
     margin: auto;
 }
 .wrapper {
@@ -78,7 +78,7 @@ hr {
 	margin: auto;
 	display: block;
 	max-height: 100px;
-	text-align: border-left;//center;
+	text-align: center;
 }
 
 /* Mobile */
