--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -65,7 +65,7 @@ hr {
 /* Divs */
 
 .container {
-    max-width: 200px; //$max-width;
+    max-width: $max-width;
     margin: auto;
 }
 .wrapper {
