--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -66,7 +66,7 @@ hr {
 
 .container {
     max-width: $max-width;
-    margin: auto;
+    margin: pull-right; //auto;
 }
 .wrapper {
     min-height: 100%;
