--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -37,12 +37,12 @@
         font-style: italic;
     }
     .profile-picture {
-        height: 200px; //150px; //$image-size;
+        height: 200px; //$image-size;
         width: 150px; //$image-size;
         position: relative;
         margin: -10px 0 0 15px;
         float: right;
-        border-radius: 1px;//32px;// 50%;
+        border-radius: 1px;// 50%;
         p & {
             padding: 0;
             margin: 0;
