--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -27,6 +27,9 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+p {
+  background-image: url("background.jpeg");
+}
 
 /*
  * Navbar
@@ -66,7 +69,7 @@ hr {
 
 .container {
     max-width: $max-width;
-    margin: pull-right; //auto;
+    margin: auto;
 }
 .wrapper {
     min-height: 100%;
