--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -13,6 +13,7 @@ body {
     margin: 0;
     font-family: "Inconsolata";
     height: 100%;
+    background-image: url("paper.gif");
 }
 a {
     text-decoration: none;
