--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -13,7 +13,7 @@ body {
     margin: 0;
     font-family: "Inconsolata";
     height: 100%;
-    background-image: url("background.jpeg"); // negar
+    background-image: url("{{ site.baseurl }}/_sass/bground.jpgbackground.jpeg"); // negar
 }
 a {
     text-decoration: none;
