--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,10 @@
     {% endif %}
 </head>
 <body>
+background-image: url('{{ site.baseurl }}/_sass/background.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;  
+      background-size: cover; 
     <div class="wrapper">
         <div class="navbar container">
             {% if site.ins_logo %}
