--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -13,7 +13,7 @@ body {
     margin: 0;
     font-family: "Inconsolata";
     height: 100%;
-    background-image: url("negar7918.github.io/background.jpeg"); // negar
+    //background-image: url("negar7918.github.io/background.jpeg"); // negar
 }
 a {
     text-decoration: none;
