--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-background-image: "{{ site.url }}/background.jpeg";
+<head style="background-image: "{{ site.url }}/background.jpeg";">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     <meta charset="utf-8">
@@ -55,7 +54,6 @@ background-image: "{{ site.url }}/background.jpeg";
     {% endif %}
 </head>
 <body>
-background-image: "{{ site.url }}/background.jpeg";
 
     <div class="wrapper">
         <div class="navbar container">
