--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -15,6 +15,18 @@ body {
     height: 100%;
     //background-image: url("negar7918.github.io/background.jpeg"); // negar
 }
+.bg { // Negar
+  /* The image used */
+  background-image: url("negar7918.github.io/background.jpeg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 a {
     text-decoration: none;
     color: $accent;
