playing with background.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -17,7 +17,7 @@ body {
 }
 .bg { // Negar
   /* The image used */
-  background-image: url("negar7918.github.io/background.jpeg");
+  background-image: url("https://negar7918.github.io/background.jpeg");
 
   /* Full height */
   height: 100%;
