--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -60,11 +60,16 @@
         width: 75px;//150px;
         height: 100px;
     }
-    .cover {
-      .feature-img: {
-          max-width: 100%;
-      }
-    }
-    .cover {
-      background: url('https://negar7918.github.io/background.jpeg');
-    }
+    .cover{
+      /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://negar7918.github.io/background.jpeg");
+
+      /* Set a specific height */
+      //height: 50%;
+
+      /* Position and center the image to scale nicely on all screens */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+}
