playing with background.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
+<div class="home">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
+  {%- endif -%}
+
+  {{ content }}
+
+
+</div>
 
 <div class="cover">
  <img class="feature-img" src="https://negar7918.github.io/background.jpeg" />
