--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,20 @@
 layout: default
 ---
 
-<div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
-
-  {{ content }}
-
-
-</div>
-
-<div class="cover">
+<html>
+    <head>
+        <title>{{ page.title }}</title>
+    </head>
+    <body>
+        <header>
+                <!-- Navigation menu goes here -->
+        </header>
+        <main>{{ content }}</main>
+        <footer>
+            <div class="cover">
  <img class="feature-img" src="https://negar7918.github.io/background.jpeg" />
 </div>
+        </footer>
+    </body>
+</html>
+
