--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@ layout: default
         </header>
         <main>{{ content }}</main>
         <footer>
-            <div class="cover">
- <img class="feature-img" src="https://negar7918.github.io/background.jpeg" />
-</div>
+           {{ content.cover }}
         </footer>
     </body>
 </html>
